Images and keyboard on mobile issue fixed

--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 25vh;
+  min-height: 203px;
+  max-height: 25vh;
   background: var(--mobile);
   background-size: cover;
   background-position: center;
@@ -373,11 +374,9 @@
   color: var(--bright-blue);
 }
 
-.footer {
-  position: fixed;
-  bottom: 0%;
+.main-footer {
   width: 100%;
-  height: 20%;
+  min-height: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
